--- a/MEngine/MEngine.vcxproj
+++ b/MEngine/MEngine.vcxproj
@@ -197,6 +197,7 @@ xcopy /F /Y /Q "..\Includes\Irrlicht$(PlatformArchitecture).dll" "..\MCS\bin\Irr
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
+    <ClInclude Include="Wrappers\MScene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
@@ -207,6 +208,7 @@ xcopy /F /Y /Q "..\Includes\Irrlicht$(PlatformArchitecture).dll" "..\MCS\bin\Irr
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Wrappers\MScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
