--- a/MEngine/MEngine.vcxproj
+++ b/MEngine/MEngine.vcxproj
@@ -194,6 +194,8 @@ xcopy /F /Y /Q "..\Includes\Irrlicht$(PlatformArchitecture).dll" "..\MCS\bin\Irr
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Content Elements\ContentElement.h" />
+    <ClInclude Include="Managers\ContentManager.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
@@ -201,6 +203,8 @@ xcopy /F /Y /Q "..\Includes\Irrlicht$(PlatformArchitecture).dll" "..\MCS\bin\Irr
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="Content Elements\ContentElement.cpp" />
+    <ClCompile Include="Managers\ContentManager.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
