Move commands to window's file.

--- a/MCS/MCS.csproj
+++ b/MCS/MCS.csproj
@@ -98,9 +98,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Commands\DelegateCommand.cs" />
-    <Compile Include="Commands\MainCommands.cs" />
-    <Compile Include="Commands\WindowsManager.cs" />
+    <Compile Include="Managers\DelegateCommand.cs" />
+    <Compile Include="Managers\WindowsManager.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
