--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -168,6 +168,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Content Elements\ContentElement.cpp" />
+    <ClCompile Include="Content Elements\Mesh.cpp" />
     <ClCompile Include="Managers\ContentManager.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Stdafx.cpp">
@@ -179,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Content Elements\ContentElement.h" />
+    <ClInclude Include="Content Elements\Mesh.h" />
     <ClInclude Include="Managers\ContentManager.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Stdafx.h" />
