--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -170,7 +170,7 @@
     <ClCompile Include="Content Elements\ContentElement.cpp" />
     <ClCompile Include="Content Elements\Mesh.cpp" />
     <ClCompile Include="Managers\ContentManager.cpp" />
-    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -182,7 +182,7 @@
     <ClInclude Include="Content Elements\ContentElement.h" />
     <ClInclude Include="Content Elements\Mesh.h" />
     <ClInclude Include="Managers\ContentManager.h" />
-    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
     <ClInclude Include="Utils\Header.h" />
