--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -171,6 +171,8 @@
     <ClCompile Include="Content Elements\Mesh.cpp" />
     <ClCompile Include="Managers\ContentManager.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Managers\SceneManager.cpp" />
+    <ClCompile Include="Scene Elements\SceneElement.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -183,11 +185,14 @@
     <ClInclude Include="Content Elements\Mesh.h" />
     <ClInclude Include="Managers\ContentManager.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Managers\SceneManager.h" />
+    <ClInclude Include="Scene Elements\SceneElement.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
     <ClInclude Include="Utils\Header.h" />
     <ClInclude Include="Utils\IOUtils.h" />
     <ClInclude Include="Utils\Thread.h" />
+    <ClInclude Include="Utils\Types\Quaternion.h" />
     <ClInclude Include="Utils\Types\Vector3.h" />
     <ClInclude Include="Utils\Utils.h" />
   </ItemGroup>
